+++ This bug was initially created as a clone of Bug #21120 +++ copied from bug# 21120 comment# 39 , after patch in bug# 21120 comment# 42 applied... Both HDMI outputs are put in the same pipe. I think they shouldn't... (II) intel(0): Output configuration: (II) intel(0): Pipe A is on (II) intel(0): Display plane A is now enabled and connected to pipe A. (II) intel(0): Pipe B is off (II) intel(0): Display plane B is now disabled and connected to pipe B. (II) intel(0): Output VGA is connected to pipe none (II) intel(0): Output HDMI-1 is connected to pipe A (II) intel(0): Output HDMI-2 is connected to pipe A (II) intel(0): RandR 1.2 enabled, ignore the following RandR disabled message.
Created attachment 26806 [details] please try the patch on your machine, then upload output from xrandr --verbose , thanks In current code we use 1 << I830_OUTPUT_HDMI as clone_mask for HDMIB and HDMIC, by i830_output_clones function, possible_clones of HDMIB and HDMIC will be set as 0x03(1<< 0 | 1 << 1) if they are both created. So if they are both detected, they will share one pipe, in fact spec does not allow them to share one pipe.
Created attachment 26811 [details] output from xrandr --verbose I'm attaching the output from xrandr --verbose with the patches from bug 21120 and 22247 applied. This seems to solve the problem.
Hi. I was wondering if there's been any progress on this recently. As I reported earlier, the patch seemed to work.
A fix for this was made about a month ago, but I haven't heard whether it's been committed. Is there any progress on this? Will the fix be included in version 2.8.0 of the driver and in the 2.6.31 kernel? It looks like it's so close to being fixed. Thanks.
Created attachment 28362 [details] [review] set clone bits in different output device and avoid that one patch is shared by both HDMI
The patch is already shipped in Eric's drm-intel-next tree. commit f8aed700c6ec46ddade6570004ce25332283b306 Author: Ma Ling <ling.ma@intel.com> Date: Mon Aug 24 13:50:24 2009 +0800 drm/i915: Set crtc/clone mask in different output devices So this bug will be marked as resolved. Thanks.
*** Bug 14570 has been marked as a duplicate of this bug. ***
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.